# Atena-agente-

./: .gitignore  .llm_model_name  .pre-commit-config.yaml  MIGRATION_NOTE.md  README.md  atena  demo_new_ui.py  demo_orchestrator.py  demo_price_extraction.py  demo_web_extraction.py  enviar.sh  ia_trends_2026_report.md  main.py  pyproject.toml  render.yaml  test_atena_hacker_recon.py  test_atena_launcher_bootstrap.py  test_browser_integration.py  test_control_system.py  test_enterprise_readiness_mission.py  test_internet_challenge_sources.py  test_kyros_mode.py  test_llm_router_prepare_free_local_model.py  test_llm_router_set_backend.py  test_local_lm_advanced_prompt.py  test_local_lm_simbrain_fallback.py  test_mission_runner_contract.py  test_pipeline_professional.py  test_pipeline_quality_contract.py  test_terminal_assistant_asset_validation.py  test_terminal_assistant_claude_mode.py  test_terminal_assistant_spinners.py  test_terminal_assistant_ui.py  vercel.json
.github/workflows/: atena-evo.yml  atena-self-evolve.yml  ci.yml  production-gate.yml
analysis_reports/: ATENA_Continuous_Internet_Evolution.json  EVOLUTION_STAGNATION_GUARD.json  README.md
api/: main.py
atena_brain/memory/: episodic_memory.db
core/: atena_advanced_market_monitor.py  atena_capability_challenge.py  atena_daemon.py  atena_dependency_installer.py  atena_digital_organism_live_cycle.py  atena_doctor.py  atena_fix.py  atena_hacker_recon.py  atena_launcher.py  atena_llm_router.py  atena_local_dashboard.py  atena_local_lm.py  atena_meta_learner.py  atena_module_preloader.py  atena_production_api.py  atena_production_center.py  atena_rate_limiter.py  atena_secret_scan.py  atena_self_healing.py  atena_subagent_solver.py  atena_terminal_assistant.py  atena_terminal_python_script.py  enterprise_memory_rag.py  external_code_smoke_runner.py  internet_challenge.py  main.py  neural_api.py  nrs_bridge.py  planner_executor_critic.py  production_contracts.py  production_gate.py  production_programming_probe.py  skill_marketplace.py
docs/: ATENA_GO_NO_GO_DAILY_2026-05-04T23:02:04Z.md  IA_TRENDS_2026_REPORT.md
evolution/knowledge/: knowledge.db
knowledge/: knowledge.db
modules/: architectactuator.py  atena_browser_agent.py  atena_code_module.py  atena_codex.py  atena_engine.py  atena_tasks.py  auto_bio-inspired_consensus_188.py  auto_bio-inspired_consensus_216.py  auto_bio-inspired_consensus_468.py  auto_bio-inspired_consensus_922.py  auto_neural_architecture_search_490.py  auto_neural_reality_sync_289.py  auto_neural_reality_sync_430.py  auto_neural_reality_sync_678.py  auto_neural_reality_sync_707.py  auto_quantum_optimization_617.py  auto_quantum_optimization_716.py  auto_quantum_optimization_786.py  autom#U00e1tion_actuator.py  automátion_actuator.py  base.py  computer_actuator.py  council_orchestrator.py  curiosity_engine.py  dynamic_requester.py  federated_learning.py  graph_memory.py  hydra_protocol.py  rlhf_engine.py  self_reflection.py  services.py  vector_memory.py  world_model.py
protocols/: atena_complex_research_mission.py
scripts/: atena_go_nogo_daily.sh  audit_agent_endpoint_readiness.sh  evaluate_generated_artifacts.py  push_main.sh  run_computer_mode_code_scan.sh  test_atena_delivery.sh
setup/: requirements-pinned.txt
skills/: run_quality_checks.sh
tests/unit/: test_atena_dependency_installer.py  test_internet_challenge.py  test_internet_continuous_evolution.py  test_production_center_cli.py  test_production_programming_probe.py
